--- a/users/single_label_predictions.ipynb
+++ b/users/single_label_predictions.ipynb
@@ -12,18 +12,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import pickle\n",
-    "import gzip"
+    "import gzip\n",
+    "\n",
+    "from sklearn.preprocessing import StandardScaler"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +220,7 @@
        "[4 rows x 40 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,14 +239,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\base.py:329: UserWarning: Trying to unpickle estimator LogisticRegression from version 0.24.0 when using version 0.23.1. This might lead to breaking code or invalid results. Use at your own risk.\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\base.py:310: UserWarning: Trying to unpickle estimator LogisticRegression from version 0.24.0 when using version 0.24.1. This might lead to breaking code or invalid results. Use at your own risk.\n",
       "  warnings.warn(\n"
      ]
     }
@@ -258,32 +260,56 @@
     "\n",
     "# Accomodation\n",
     "with open('../models/03b_logistic_regression_accomodation.pickle', 'rb') as f:\n",
-    "    log_reg_model_accomodation = pickle.load(f)"
+    "    log_reg_model_accomodation = pickle.load(f)\n",
+    "    \n",
+    "# Crowd dispersal\n",
+    "with open('../models/03c_logistic_regression_crowddispersal.pickle', 'rb') as f:\n",
+    "    log_reg_model_crowd = pickle.load(f)\n",
+    "    \n",
+    "# Ignore\n",
+    "with open('../models/03d_logistic_regression_ignore.pickle', 'rb') as f:\n",
+    "    log_reg_model_ignore = pickle.load(f) \n",
+    "    \n",
+    "# Violent response\n",
+    "with open('../models/03e_logistic_regression_violent_response.pickle', 'rb') as f:\n",
+    "    log_reg_model_violent = pickle.load(f)\n",
+    "    \n",
+    "# Beatings\n",
+    "with open('../models/03f_logistic_regression_beatings.pickle', 'rb') as f:\n",
+    "    log_reg_model_beatings = pickle.load(f)\n",
+    "    \n",
+    "# Shootings\n",
+    "with open('../models/03g_logistic_regression_shootings.pickle', 'rb') as f:\n",
+    "    log_reg_model_shootings = pickle.load(f)\n",
+    "    \n",
+    "# Killings\n",
+    "with open('../models/03h_logistic_regression_killings.pickle', 'rb') as f:\n",
+    "    log_reg_model_killings = pickle.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "LogisticRegression(C=0.01, solver='liblinear')"
+       "'0.24.1'"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "log_reg_model_accomodation"
+    "log_reg_model_accomodation.__getstate__()['_sklearn_version']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -301,45 +327,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1 1 1 1]\n"
-     ]
-    }
-   ],
-   "source": [
-    "result = log_reg_model_accomodation.predict(X)\n",
-    "\n",
-    "print(result)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1, 1, 1], dtype=int64)"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "result.T"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -348,20 +335,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#X.drop([0,1,2,3], inplace=True)  # drop the four rows of old data."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X.drop([0], inplace=True)  # drop the four rows of old data."
+    "X.drop([0,1,2,3], inplace=True)  # drop the four rows of old data."
    ]
   },
   {
@@ -384,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +476,7 @@
        "[1 rows x 40 columns]"
       ]
      },
-     "execution_count": 319,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -573,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -722,7 +700,7 @@
        "[2 rows x 40 columns]"
       ]
      },
-     "execution_count": 320,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -792,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -976,7 +954,7 @@
        "[3 rows x 40 columns]"
       ]
      },
-     "execution_count": 321,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1047,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1266,7 +1244,7 @@
        "[4 rows x 40 columns]"
       ]
      },
-     "execution_count": 322,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1332,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1586,7 +1564,7 @@
        "[5 rows x 40 columns]"
       ]
      },
-     "execution_count": 323,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1647,12 +1625,132 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Use StandardScaler to scale the U.S. protests data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sc = StandardScaler()\n",
+    "X_sc = sc.fit_transform(X)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use all loaded models to predict outcomes on the U.S. protests."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arrest_preds = log_reg_model_arrests.predict(X_sc)\n",
+    "accomodation_preds = log_reg_model_accomodation.predict(X_sc)\n",
+    "beatings_preds = log_reg_model_beatings.predict(X_sc)\n",
+    "crowd_preds = log_reg_model_crowd.predict(X_sc)\n",
+    "ignore_preds = log_reg_model_ignore.predict(X_sc)\n",
+    "killings_preds = log_reg_model_killings.predict(X_sc)\n",
+    "shootings_preds = log_reg_model_shootings.predict(X_sc)\n",
+    "violent_preds = log_reg_model_violent.predict(X_sc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Create dataframe to contain prediction results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1999 Seattle WTO Protest</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2011 Occupy Atlanta</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018 March For Our Lives</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020 Michigan Covid Lockdown</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021 D.C. Riot</th>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: []\n",
+       "Index: [1999 Seattle WTO Protest, 2011 Occupy Atlanta, 2018 March For Our Lives, 2020 Michigan Covid Lockdown, 2021 D.C. Riot]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictions_df = pd.DataFrame([], index=X.index)\n",
+    "predictions_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions_df['arrests'] = arrest_preds.tolist()\n",
+    "predictions_df['accomodation'] = accomodation_preds.tolist()\n",
+    "predictions_df['beatings'] = beatings_preds.tolist()\n",
+    "predictions_df['crowd_dispersal'] = crowd_preds.tolist()\n",
+    "predictions_df['ignore'] = ignore_preds.tolist()\n",
+    "predictions_df['killings'] = killings_preds.tolist()\n",
+    "predictions_df['shootings'] = shootings_preds.tolist()\n",
+    "predictions_df['violent_response'] = violent_preds.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1679,10 +1777,11 @@
        "      <th>arrests</th>\n",
        "      <th>accomodation</th>\n",
        "      <th>beatings</th>\n",
-       "      <th>crowddispersal</th>\n",
+       "      <th>crowd_dispersal</th>\n",
        "      <th>ignore</th>\n",
        "      <th>killings</th>\n",
        "      <th>shootings</th>\n",
+       "      <th>violent_response</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1691,6 +1790,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1705,6 +1805,7 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2018 March For Our Lives</th>\n",
@@ -1713,6 +1814,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -1725,12 +1827,14 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021 D.C. Riot</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1741,41 +1845,36 @@
        "</div>"
       ],
       "text/plain": [
-       "                              arrests  accomodation  beatings  crowddispersal  \\\n",
-       "1999 Seattle WTO Protest            0             0         0               0   \n",
-       "2011 Occupy Atlanta                 0             0         0               0   \n",
-       "2018 March For Our Lives            0             0         0               0   \n",
-       "2020 Michigan Covid Lockdown        0             0         0               0   \n",
-       "2021 D.C. Riot                      0             0         0               0   \n",
+       "                              arrests  accomodation  beatings  \\\n",
+       "1999 Seattle WTO Protest            0             0         0   \n",
+       "2011 Occupy Atlanta                 0             0         0   \n",
+       "2018 March For Our Lives            0             0         0   \n",
+       "2020 Michigan Covid Lockdown        0             0         0   \n",
+       "2021 D.C. Riot                      0             0         0   \n",
        "\n",
-       "                              ignore  killings  shootings  \n",
-       "1999 Seattle WTO Protest           0         0          0  \n",
-       "2011 Occupy Atlanta                1         0          0  \n",
-       "2018 March For Our Lives           1         0          0  \n",
-       "2020 Michigan Covid Lockdown       1         0          0  \n",
-       "2021 D.C. Riot                     0         0          0  "
+       "                              crowd_dispersal  ignore  killings  shootings  \\\n",
+       "1999 Seattle WTO Protest                    1       0         0          0   \n",
+       "2011 Occupy Atlanta                         0       1         0          0   \n",
+       "2018 March For Our Lives                    0       1         0          0   \n",
+       "2020 Michigan Covid Lockdown                0       1         0          0   \n",
+       "2021 D.C. Riot                              1       0         0          0   \n",
+       "\n",
+       "                              violent_response  \n",
+       "1999 Seattle WTO Protest                     0  \n",
+       "2011 Occupy Atlanta                          0  \n",
+       "2018 March For Our Lives                     0  \n",
+       "2020 Michigan Covid Lockdown                 0  \n",
+       "2021 D.C. Riot                               0  "
       ]
      },
-     "execution_count": 324,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pred_values = multi_label_forest_model.predict(X)\n",
-    "\n",
-    "predictions_df = pd.DataFrame(pred_values, columns=['arrests', 'accomodation', 'beatings',\n",
-    "       'crowddispersal', 'ignore', 'killings', 'shootings'], index=X.index)\n",
-    "\n",
     "predictions_df"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
