first data dictionary

--- a/users/log_reg_for_metrics_en.ipynb
+++ b/users/log_reg_for_metrics_en.ipynb
@@ -437,12 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -615,12 +610,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [],
    "source": [
     "def state_response_predictor(df, features, target, model, output_flag=False):\n",
     "    \n",
+    "    '''\n",
+    "    Takes in Dataframe, selection of features, target, ad instantiated model.\n",
+    "    Scales train and test features. \n",
+    "    Fits model on train data.\n",
+    "    Makes predictions on scaled train and test sets. \n",
+    "    Finds following metrics for both train and test sets: f1 score, precision, recall, accuracy, roc/auc\n",
+    "    Returns the metrics to use to evaluate the model and build the model_performance_df. \n",
+    "    Returns X_train to be used to find feature importances. \n",
+    "    Note: the instantiated model passed to this function is then a fit model once the function has been run. \n",
+    "    '''\n",
     "    X = features \n",
     "    y = df[target]\n",
     "\n",
@@ -675,6 +680,12 @@
    "outputs": [],
    "source": [
     "def find_most_important_features(X_train, model, n=5):\n",
+    "    \n",
+    "    '''\n",
+    "    Takes in X_train which is a list of features as well as a model that has been fit. \n",
+    "    Builds list of features and their associated coefficients that correlate the most strongly with the target on which the model is built.\n",
+    "    The features can correlate either negatively (predicting that the response will not occur) or positively (predicting that the response will occur).\n",
+    "    '''\n",
     "\n",
     "    feature_importances = list(zip(X_train.columns, model.coef_[0]))\n",
     "\n",
@@ -694,10 +705,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 265,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Building a dictionary \n",
+    "# keys = each of the columns in the dataframe \n",
+    "# values = more informative, more readable label that will be better for visualizations \n",
+    "\n",
+    "\n",
     "feat_dict = {'protestnumber':'No. Protests that Year',\n",
     "             'protesterviolence': 'Protesters Violent', \n",
     "             'pop_total': 'Population of Country',\n",
@@ -742,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -759,6 +782,10 @@
     "        }\n",
     "\n",
     "def plot_most_important_features(negative_features, negative_coeffs, positive_features, positive_coeffs, target):\n",
+    "    \n",
+    "    '''\n",
+    "    Takes in features and coefficients from find_most_important_features function and produces a plot.\n",
+    "    '''\n",
     "    \n",
     "#     box = dict(pad=5, alpha=0.2)\n",
     "    \n",
